--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav id="desktop-nav">
     <div class="logo">
-      <div class="img-container"><img src="/assets/S.jpeg" alt=""></div>
+      <div class="img-container"><img src="./assets/S.jpeg" alt=""></div>
       <p class="iva">iva</p>
     </div>
     <div>
@@ -27,7 +27,7 @@
   </nav>
   <nav id="hamburger-nav">
     <div class="logo">
-      <div class="img-container"><img src="/assets/S.jpeg" alt=""></div>
+      <div class="img-container"><img src="./assets/S.jpeg" alt=""></div>
       <p class="iva">iva</p>
     </div>
     <div class="hamburger-menu">
