--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       </div>
       <div id="socials-container">
         <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
-          onclick="location.href='https://linkedin.com/'" />
+          onclick="location.href='https://www.linkedin.com/in/sivananthamduraivel/'" />
         <img src="./assets/github.png" alt="My Github profile" class="icon"
-          onclick="location.href='https://github.com/'" />
+          onclick="location.href='https://github.com/SivananthamDuraivel'" />
       </div>
     </div>
   </section>
