--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               Github
             </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://swifttick-frontend.vercel.app/'">
+              onclick="location.href=''">
               Live Demo
             </button>
           </div>
