--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
               Github
             </button>
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/SivananthamDuraivel/TECHNO_FEST'">
+              onclick="location.href='https://sivananthamduraivel.github.io/TECHNO_FEST/'">
               Live Demo
             </button>
           </div>
